--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 	 crossorigin="anonymous">
 	<style>
 		img {
-			height: 300px;
+			width: 49%;
 			cursor: pointer;
+		}
+		
+		@media only screen and (max-width: 700px) {
+		img {
+			width: 100%;
+			cursor: pointer;
+		}
 		}
 	</style>
 </head>
@@ -19,32 +26,33 @@
 <body>
 	<div class="container">
 		<h1>Cute Cat</h1>
-		<h3 id="clicks1">Not yet clicked!</h3>
-		<h3 id="clicks2">Not yet clicked!</h3>
-		<div>
-			<img src="https://ipfs.io/ipfs/QmW2WQi7j6c7UgJTarActp7tDNikE4B2qXtFCfLPdsgaTQ/cat.jpg" alt="Cat-Image" id="kitty">
-			<img src="http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Mammals/H-P/photoark-lion.png.adapt.945.1.jpg" alt="Cat-Image" id="kitty2">
-		</div>
+		<h3><span id="clicks1">Not yet clicked!</span>&nbsp<span id="clicks2"> Not yet clicked!</span></h3>
+		<h3 </h3>
+			<div>
+				<img src="https://ipfs.io/ipfs/QmW2WQi7j6c7UgJTarActp7tDNikE4B2qXtFCfLPdsgaTQ/cat.jpg" alt="Cat-Image" id="kitty">
+				<img src="http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Mammals/H-P/photoark-lion.png.adapt.945.1.jpg"
+				 alt="Cat-Image" id="kitty2">
+			</div>
 	</div>
 	<script>
-		if(localStorage.getItem("cat1") === null){
+		if (localStorage.getItem("cat1") === null) {
 			var cat1 = 0;
-		}else{
+		} else {
 			var cat1 = localStorage.getItem("cat1");
-			document.getElementById("clicks1").textContent = `Cat 1 clicked ${cat1} times:)`;
+			document.getElementById("clicks1").textContent = `Cat 1 clicked ${cat1} times.`;
 		}
 
-		if(localStorage.getItem("cat2") === null){
+		if (localStorage.getItem("cat2") === null) {
 			var cat2 = 0;
-		}else{
+		} else {
 			var cat2 = localStorage.getItem("cat2");
 			document.getElementById("clicks2").textContent = `Cat 2 clicked ${cat2} times:)`;
 		}
-	
+
 		document.getElementById("kitty").addEventListener("click", function () {
 			cat1++;
 			localStorage.setItem("cat1", cat1);
-			document.getElementById("clicks1").textContent = `Cat 1 clicked ${cat1} times:)`;
+			document.getElementById("clicks1").textContent = `Cat 1 clicked ${cat1} times.`;
 		});
 		document.getElementById("kitty2").addEventListener("click", function () {
 			cat2++;
