--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
 	<style>
-		img {
+		.cat-img {
 			width: 49%;
+			height: 300px;
+			display: inline-block;
 			cursor: pointer;
+		}
+
+		#kitty {
+			background-image: url("https://ipfs.io/ipfs/QmW2WQi7j6c7UgJTarActp7tDNikE4B2qXtFCfLPdsgaTQ/cat.jpg");
+			background-size: cover;
+		}
+
+		#kitty2 {
+			background-image: url("http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Mammals/H-P/photoark-lion.png.adapt.945.1.jpg");
+			background-size: cover;
 		}
 		
 		@media only screen and (max-width: 700px) {
-		img {
+		.cat-img {
 			width: 100%;
 			cursor: pointer;
 		}
@@ -29,9 +41,12 @@
 		<h3><span id="clicks1">Not yet clicked!</span>&nbsp<span id="clicks2"> Not yet clicked!</span></h3>
 		<h3 </h3>
 			<div>
-				<img src="https://ipfs.io/ipfs/QmW2WQi7j6c7UgJTarActp7tDNikE4B2qXtFCfLPdsgaTQ/cat.jpg" alt="Cat-Image" id="kitty">
-				<img src="http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Mammals/H-P/photoark-lion.png.adapt.945.1.jpg"
-				 alt="Cat-Image" id="kitty2">
+				<div class="cat-img" id="kitty">
+					hello
+				</div>
+				<div class="cat-img" id="kitty2">
+					hello
+				</div>
 			</div>
 	</div>
 	<script>
